--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -8,6 +8,10 @@ RUN npm ci --only=production
 
 # Copy source code
 COPY src/ ./src/
+COPY tests/ ./tests/
+COPY scripts/ ./scripts/
+COPY docs/ ./docs/
+COPY .env .env
 
 # Create logs directory
 RUN mkdir -p logs
@@ -16,9 +20,6 @@ RUN mkdir -p logs
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nodejs -u 1001
 
-# Change ownership of the app directory
-RUN chown -R nodejs:nodejs /app
-USER nodejs
 
 # Expose port
 EXPOSE 3000
