Updating ENV file

--- a/.env
+++ b/.env
@@ -8,3 +8,14 @@ REDIS_URL=redis://localhost:6379
 
 # Api
 API_BASE_URL=http://localhost:3000
+
+# Vendor limits
+SYNC_VENDOR_RATE_LIMIT=10
+ASYNC_VENDOR_RATE_LIMIT=5
+
+# Worker limits
+WORKER_CONCURRENCY=5
+WORKER_RETRY_ATTEMPTS=3
+WORKER_RETRY_DELAY=1000
+WORKER_JOB_TIMEOUT=10000
+
