--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=3000
 
 # Database
-MONGODB_URI=mongodb+srv://startease:Yogesh321@startease.ttlcu.mongodb.net/enrich
+MONGODB_URI=mongodb://localhost:27017/multi-vendor-service
 REDIS_URL=redis://localhost:6379
 
 # Api
